# print-probability-matching

./: .gitignore  HANDOFF.md  PACKAGING_PLAN.md  README.md  RESULTS.md  aggregate_training_results.py  attention.py  build_faiss_index.sh  cbam_model.py  cluster_csv.py  cnn_grid_search_attention.sh  cnn_grid_search_l2embedding.sh  control_damage.ipynb  convert_workbench_group_image_names.py  create_lockespinoza_test_set.py  damage_classifier.py  datasets.py  discover_matcher_unaligned.sh  discover_matcher_unaligned_copy_for_parts.sh  discover_matcher_unaligned_dualenc.sh  discover_matcher_unaligned_dualenc_may25.sh  discover_show_results.ipynb  discover_show_results_faiss.ipynb  discover_show_results_faiss_dldt_anon_redo_53.ipynb  discover_show_results_faiss_fortysermons_internal.ipynb  discover_show_results_faiss_locke_internal.ipynb  discover_show_results_faiss_may25.ipynb  display_results.ipynb  dual_vs_cross.ipynb  eval_lockespinoza.sh  eval_matcher_all_chars.sh  eval_matcher_unaligned.sh  evaluation.py  filter_damage_filelist.py  filter_filelist_by_ocular_logprob.py  filter_shakespeare_books_by_folio_number.py  generate_anchors.py  get_locke_twotreatises_partC_top20pct_damages.py  interactive_annotation.py  investigate_curly_Rs.ipynb  (+51 more)
alignment_code/: README.md  align.sh  prep_untar_align_slurm_train_from.sh  prep_untar_alignstretch_slurm_train_from.sh  prep_untar_alignstretch_slurm_train_from_ja.sh  run_alignment_savernake.sh  submit_alignment_sbatch.sh  test_alignment.sh  untar_align_slurm.sh  untar_align_slurm_noextract.sh  untar_align_slurm_test_extract.sh  (+9 more)
(+109 files in other folders)
