[tool.poetry]
name = "matching"
version = "0.1.0"
description = ""
authors = ["nvog <nikolai.vogler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
timm = "^1.0.11"
networkx = "3.2.1"
plotly = "^5.24.1"
ipykernel = "^6.29.5"
faiss-cpu = "^1.9.0.post1"
dash = "^2.18.2"
imagesize = "^1.4.1"
torchvision = "^0.22.0"
ipywidgets = "^8.1.7"
marimo = "^0.16.0"
altair = "^5.5.0"
polars = "^1.33.1"
fastexcel = "^0.16.0"
pyarrow = "^21.0.0"
openpyxl = "^3.1.5"
vl-convert-python = "^1.8.0"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
